--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dev": "bun run --hot src/index.ts"
   },
   "dependencies": {
+    "@hono/zod-validator": "^0.2.2",
     "@prisma/client": "5.19.1",
     "hono": "^4.6.2",
     "zod": "^3.23.8"
